# my-k8s-dashboard

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
docker-proxy/: .gitignore  Cargo.toml
docker-proxy/src/: main.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  reducer.ts  store.ts  utils.ts
frontend/src/components/: Collapsible.tsx  ContainerRow.tsx  Header.tsx  Home.tsx  NamespaceRow.tsx  PodRow.tsx  index.ts
frontend/src/components/icons/: ChevronDown.tsx  ChevronRight.tsx  index.ts  types.ts
frontend/src/reducers/: namespaces.ts
frontend/src/types/: index.ts  namespaces.ts
src/: client.rs  config.rs  main.rs  monitoring.rs  usage.rs
src/client/: client.rs  connection.rs  mod.rs  traits.rs
templates/: index.html
