[package]
name = "my_k8s_dash"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.44.0"
kube-runtime = "0.44.0"
k8s-openapi = { version = "0.10.0", features = ["v1_19"], default-features=false }
openssl = { version = "0.10.29", features = ["vendored"] }
actix-rt = "1.1.1"