[package]
name = "my_k8s_dash"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.46.0"
kube-runtime = "0.46.0"
kube-derive = "0.46.0"
k8s-openapi = { version = "0.10.0", features = ["v1_19"], default-features=false }
openssl = { version = "0.10.29", features = ["vendored"] }
actix-rt = "1.1.1"
actix-web = "3.3.2"
serde = "1.0.118"
schemars = "0.8.0"
serde_json = "1.0.61"
env_logger = "0.8.2"
actix-cors = "0.5.4"
lazy_static = "1.4.0"